WIP fixing background image bug on mobile devices

--- a/src/App.module.css
+++ b/src/App.module.css
@@ -13,7 +13,6 @@
 @media (max-width: 1000px) {
 	.body {
     height: 100%;
-    background-color: rgb(181, 209, 217, 0.5);
 	}
 }
 
